// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MobileNavItem > should render Expandable MobileNavItem 1`] = `
<DocumentFragment>
  <li
    aria-label="Item 2"
    class="mocked-styled-6 el-experimental-mobile-nav-item-list-item"
    data-is-expanded="true"
  >
    <button
      aria-controls="test-static-id"
      aria-current="true"
      aria-expanded="true"
      class="mocked-styled-2 el-experimental-mobile-nav-item-expander-button"
      type="button"
    >
      <span
        class="mocked-styled-3 el-experimental-mobile-nav-item-content"
      >
        Item 2
        <span
          class="mocked-styled-4 el-experimental-mobile-nav-item-badge"
        />
      </span>
      <svg
        class="el-icon"
        color="inherit"
        data-size="sm"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.995 16.496a1 1 0 0 1-.71-.29L12 9.913l-6.286 6.293a1.004 1.004 0 0 1-1.42-1.418l6.997-6.993a1 1 0 0 1 1.419 0l6.995 6.993a.999.999 0 0 1-.71 1.708Z"
        />
      </svg>
    </button>
    <ul
      aria-hidden="false"
      class="mocked-styled-5 el-experimental-mobile-nav-sub-item-unordered-list"
      id="test-static-id"
    >
      <li
        aria-label="Sub Item 2.1"
        class="mocked-styled-6 el-experimental-mobile-nav-item-list-item"
      >
        <a
          aria-current="page"
          class="mocked-styled-0 el-experimental-mobile-nav-item-anchor"
          href="#item-2.1"
        >
          <span
            class="mocked-styled-3 el-experimental-mobile-nav-item-content"
          >
            Sub Item 2.1
          </span>
        </a>
      </li>
      <li
        aria-label="Sub Item 2.2"
        class="mocked-styled-6 el-experimental-mobile-nav-item-list-item"
      >
        <button
          class="mocked-styled-1 el-experimental-mobile-nav-item-button"
        >
          <span
            class="mocked-styled-3 el-experimental-mobile-nav-item-content"
          >
            Sub Item 2.2
            <span
              class="mocked-styled-4 el-experimental-mobile-nav-item-badge"
            />
          </span>
        </button>
      </li>
      <li
        aria-label="Sub Item 2.3"
        class="mocked-styled-6 el-experimental-mobile-nav-item-list-item"
      >
        <a
          class="mocked-styled-0 el-experimental-mobile-nav-item-anchor"
          href="#item-2.3"
        >
          <span
            class="mocked-styled-3 el-experimental-mobile-nav-item-content"
          >
            Sub Item 2.3
          </span>
        </a>
      </li>
    </ul>
  </li>
</DocumentFragment>
`;

exports[`MobileNavItem > should render Simple MobileNavItem 1`] = `
<DocumentFragment>
  <li
    aria-label="Item 1"
    class="mocked-styled-6 el-experimental-mobile-nav-item-list-item"
  >
    <a
      class="mocked-styled-0 el-experimental-mobile-nav-item-anchor"
      href="#item-1"
    >
      <span
        class="mocked-styled-3 el-experimental-mobile-nav-item-content"
      >
        Item 1
      </span>
    </a>
  </li>
</DocumentFragment>
`;

exports[`MobileNavItem > should render Simple MobileNavItem with badge 1`] = `
<DocumentFragment>
  <li
    aria-label="Item 1"
    class="mocked-styled-6 el-experimental-mobile-nav-item-list-item"
  >
    <a
      class="mocked-styled-0 el-experimental-mobile-nav-item-anchor"
      href="#item-1"
    >
      <span
        class="mocked-styled-3 el-experimental-mobile-nav-item-content"
      >
        Item 1
        <span
          class="mocked-styled-4 el-experimental-mobile-nav-item-badge"
        />
      </span>
    </a>
  </li>
</DocumentFragment>
`;
